# apis-instance-sicprod

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml
.github/: auto-deploy-values.yaml
.github/workflows/: deploy.yml
apis_ontology/: admin.py  api_views.py  filtersets.py  forms.py  generators.py  legacydatemixin.py  models.py  querysets.py  serializers.py  settings.py  signals.py  tables.py  urls.py  views.py
apis_ontology/management/commands/: copy_deprecated_name.py  createrelationtypes.py  importplaces.py  importproperties.py  importtonew.py  metacoltoskoscol.py  migrate_relations.py  updateiiif.py
apis_ontology/migrations/: 0001_initial.py  0002_event_collection_function_collection_and_more.py  0003_event_metadata_function_metadata_and_more.py  0004_alter_event_metadata_alter_function_metadata_and_more.py  0005_alter_event_metadata_alter_function_metadata_and_more.py  0006_event_name_function_name_institution_name_and_more.py  0007_alter_event_collection_alter_function_collection_and_more.py  0008_alter_person_alternative_label.py  0008_familyrelation.py  0009_familyrelation_notes.py  0009_versionevent_versionfunction_versioninstitution_and_more.py  0010_businessrelation.py  0010_remove_versionfunction_collection_collection_and_more.py  0011_alter_event_options_alter_function_options_and_more.py  0011_ausgeuebt_in_besitzt_bewohnt_buergt_fuer_empfiehlt_and_more.py  0011_remove_businessrelation_notes.py  0012_alter_event_options_alter_function_options_and_more.py  0012_alter_place_options_rename_name_place_label_and_more.py  0012_parentof.py  0013_alter_place_label_alter_versionplace_label.py  0014_ausgeuebtin_besitzt_bewohnt_buergtfuer_empfiehlt_and_more.py  0015_remove_versionevent_self_contenttype_and_more.py  0016_alter_place_feature_code_alter_place_label_and_more.py  0017_funktionfuehrtdurch_funktionnimmtentgegen_and_more.py  0018_remove_versionausgeuebtin_version_tag_and_more.py  0019_alter_ausgeuebtin_options_alter_besitzt_options_and_more.py  0020_alter_ausgeuebtin_end_date_from_and_more.py
apis_ontology/templates/: base.html  failingreferences.html
data/: iiif.json  properties.json  wikidatardf.toml
sicprod/: settings.py  urls.py
(+6 files in other folders)
