[project]
name = "apis-instance-sicprod-dev"
version = "0.1.0"
description = "APIS Instance SiCProD"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apis-core-rdf==0.51.1",
    "apis-bibsonomy==0.13.2",
    "apis-acdhch-default-settings==2.10.0",
    "psycopg2>=2.9,<3.0",
    "django-cors-headers>=4.0,<=5.0",
    "django-auditlog>=3.0.0,<=4.0",
    "django-grouper==0.2.0",
    "apis-acdhch-django-auditlog==0.2.1",
    "django-interval==0.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]
