[project]
name = "apis-instance-sicprod-dev"
version = "0.1.0"
description = "APIS Instance SiCProD"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django~=5.2",
    "apis-core-rdf==0.57.4",
    "apis-bibsonomy==0.13.2",
    "apis-acdhch-default-settings==2.15.0",
    "psycopg2>=2.9,<3.0",
    "django-cors-headers>=4.0,<=5.0",
    "django-auditlog>=3.0.0,<=4.0",
    "django-grouper==0.3.0",
    "apis-acdhch-django-auditlog==0.3.0",
    "django-interval==0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]
