[project]
name = "apis-instance-sicprod-dev"
version = "0.1.0"
description = "APIS Instance SiCProD"
authors = [{ name = "Birger Schacht", email = "birger.schacht@oeaw.ac.at"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apis-core-rdf==0.65.1",
    "apis-bibsonomy==0.14.0",
    "apis-acdhch-default-settings==2.20.0",
    "psycopg[binary]~=3.0",
    "django-cors-headers>=4.0,<=5.0",
    "django-grouper==0.4.0",
    "django-interval==0.5.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apis_ontology"]
